tests/baselines/reference/reExportAliasMakesInstantiated.errors.txt
reExportAliasMakesInstantiated.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
reExportAliasMakesInstantiated.ts(5,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
reExportAliasMakesInstantiated.ts(11,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
reExportAliasMakesInstantiated.ts(15,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== reExportAliasMakesInstantiated.ts (4 errors) ====
    declare module pack1 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
      const test1: string;
      export { test1 };
    }
    declare module pack2 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
      import test1 = pack1.test1;
      export { test1 };
    }
    export import test1 = pack2.test1;
    
    declare module mod1 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
      type test1 = string;
      export { test1 };
    }
    declare module mod2 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
      import test1 = mod1.test1;
      export { test1 };
    }
    const test2 = mod2; // Possible false positive instantiation, but ok
    